# template-python-fast-api

./: Makefile  README.md  pyproject.toml
src/: app.py  container.py  errors.py  main.py
src/api/: health.py
src/config/: server.py
src/svc/: health.py
tests/bdd/: environment.py  health.feature
tests/bdd/steps/: auth.py  fast.py  query.py  response.py
